commit before sleep

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section id="game">
-      <img class="redPanda" src="resources/redPanda.png" />
+      <img id="redPanda" src="resources/redPanda.png" />
       <div class="appleCounter">
         <span id="appleCounter">0</span>
         <img src="resources/apple.png" />
