--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
     <title>Document</title>
   </head>
   <body>
-    <section id="home">
-      <h1>The Great Game</h1>
 
-      <div class="flexDiv">
-        <div id="themeSelector">
-          <div class="themes">
+      <section class="title">
+      <h1>The Great Game </h1>
+        <span class="play">▶</span>
+      </section>
+
+      <section id="themeSelector">
+        <div id="themeIcons">
+          <fieldset class="themes">
+          <legend>Choose your theme</legend>
             <span class="icon redPanda">🍎</span>
             <span class="icon dino">🥚</span>
           </div>
 
-          <div class="buttonsDiv">
-            <span class="button play">▶</span>
-          </div>
-        </div>
+        </fieldset>
 
         <div id="preview">
           <img src="resources/redPanda.png" />
         </div>
-      </div>
-    </section>
+      </section>
   </body>
   <script type="module" src="home.js"></script>
 </html>
