--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <div id="themeIcons">
           <fieldset class="themes">
           <legend>Choose your theme</legend>
-            <span class="icon redPanda">🍎</span>
-            <span class="icon dino">🥚</span>
+            <span class="icon redPanda" data-theme="redPanda">🍎</span>
+            <span class="icon dino" data-theme="dino">🥚</span>
           </div>
 
         </fieldset>
 
         <div id="preview">
-          <img src="resources/redPanda.png" />
+          <img class="imageToChange" src="resources/redPanda.png" />
         </div>
       </section>
   </body>
