message in console

--- a/game.html
+++ b/game.html
@@ -10,11 +10,12 @@
   <body>
     <section id="game">
       <img id="player" src="resources/redPanda.png" />
-      <div class="scoreDiv">
+      <div id="scoreDiv">
         <span id="score">0</span>
         <img src="resources/apple.png" />
       </div>
     </section>
   </body>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
+  <script type="module" src="console.js"></script>
 </html>
