--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <legend>Choose your theme</legend>
             <span class="icon redPanda" data-theme="redPanda">🍎</span>
             <span class="icon dino" data-theme="dino">🥚</span>
+            <span class="icon gigaChad" data-theme="gigaChad">💪</span>
           </div>
 
         </fieldset>
