--- a/game.html
+++ b/game.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <section id="game">
-      <img id="player" src="resources/redPanda.png" />
+      <img id="player" />
       <div id="scoreDiv">
         <span id="score">0</span>
-        <img src="resources/apple.png" />
+        <img />
       </div>
     </section>
   </body>
