--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-      <section class="title">
+      <section class="title randomColor">
       <h1>The Great Game </h1>
         <span class="play">▶</span>
       </section>
