add bomb playable

--- a/game.html
+++ b/game.html
@@ -10,9 +10,15 @@
   <body>
     <section id="game">
       <img id="player" />
-      <div id="scoreDiv">
-        <span id="score">0</span>
-        <img />
+      <div class="counterSection">
+        <div id="itemCountSection">
+          <span>0</span>
+          <img />
+        </div>
+        <div id="bombCountSection">
+          <span>0</span>
+          <img />
+        </div>
       </div>
     </section>
   </body>
