--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="game.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>The Great Game</title>
   </head>
   <body>
     <section id="game">
@@ -22,6 +22,6 @@
       </div>
     </section>
   </body>
-  <script type="module" src="script.js"></script>
-  <script type="module" src="console.js"></script>
+  <script type="module" src="game.js"></script>
+  <script src="console.js"></script>
 </html>
