--- a/gameOver.html
+++ b/gameOver.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="gameOver.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>The Great Game</title>
   </head>
   <body>
-    <div class="randomColor">
+    <div class="title randomColor">
       <span>Game Over</span>
+      <a href="index.html">index</a>
     </div>
   </body>
+  
+  <script type="module" src="index.js"></script>
 </html>
