--- a/gameOver.html
+++ b/gameOver.html
@@ -10,7 +10,7 @@
   <body>
     <div class="title randomColor">
       <span>Game Over</span>
-      <a href="index.html">index</a>
+      <a href="index.html">Home</a>
     </div>
   </body>
   
